tests/miniJava/neg/006849_mutation.MiniJava
class void { public static void Main ( String [ ] java ) { { } } }
